--- a/BLL/Buytopia.BLL.csproj
+++ b/BLL/Buytopia.BLL.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Service\Repositori\" />
-    <Folder Include="Service\" />
+    <Compile Remove="Service\**" />
+    <EmbeddedResource Remove="Service\**" />
+    <None Remove="Service\**" />
   </ItemGroup>
 
   <ItemGroup>
