--- a/BLL/Buytopia.BLL.csproj
+++ b/BLL/Buytopia.BLL.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\DAL\Buytopia.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Service\" />
+  </ItemGroup>
+
 </Project>
