--- a/BLL/Buytopia.BLL.csproj
+++ b/BLL/Buytopia.BLL.csproj
@@ -6,6 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Service\**" />
+    <EmbeddedResource Remove="Service\**" />
+    <None Remove="Service\**" />
+  </ItemGroup>
+
 
 
   <ItemGroup>
@@ -23,10 +29,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\Buytopia.DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Service\" />
   </ItemGroup>
 
 </Project>
