Service e Controller Implementati

--- a/BuytopiaNet/appsettings.json
+++ b/BuytopiaNet/appsettings.json
@@ -5,8 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BuytopiaDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DBBuytopia;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "BuytopiaDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=DbBuytopia;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
