--- a/BuytopiaNet/Buytopia.PL.csproj
+++ b/BuytopiaNet/Buytopia.PL.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\Buytopia.DAL.csproj" />
+    <ProjectReference Include="..\BLL\Buytopia.BLL.csproj" />
   </ItemGroup>
 
 </Project>
